--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,15 @@
-/* здесь подключите шрифты */
+@font-face {
+  font-family: "BebasNeue-Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../../fonts/BebasNeue-Bold.woff2") format("woff2"), url("../../fonts/BebasNeue-Black.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Ubuntu-Light";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../../fonts/Ubuntu-Light.woff2") format("woff2"), url("../../fonts/Ubuntu-Light.woff") format("woff");
+  font-display: swap;
+}
