--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -4,4 +4,7 @@
 @import "./common/fonts.scss";
 
 /* BLOCKS */
-@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/title.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/modal.scss";
