--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,4 +1,4 @@
-@use '../common/variables.scss';
+@use "../common/variables.scss";
 
 .hero__container {
   padding-inline: 20px;
@@ -29,7 +29,7 @@
 }
 
 .hero__title {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
 
   @media (min-width: variables.$desktop-width) {
     margin: 0;
@@ -55,15 +55,15 @@
   height: 100%;
   position: absolute;
   object-fit: cover;
-}
 
-.hero__image1 {
-  transform: translateY(-12px);
-  transition: transform 1s linear;
-}
+  &--table {
+    transform: translateY(-12px);
+    transition: transform 1s linear;
+  }
 
-.hero__image2 {
-  z-index: -1;
+  &--legs {
+    z-index: -1;
+  }
 }
 
 .hero__button {
