--- a/source/styles/blocks/modal.scss
+++ b/source/styles/blocks/modal.scss
@@ -9,9 +9,11 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 10;
+  animation: open 2s;
 
   &--close {
     display: none;
+    animation: close 2s;
   }
 }
 
@@ -38,4 +40,36 @@
   text-align: center;
   font-size: 30px;
   margin: 14px 0 0;
+}
+
+@keyframes open {
+  from {
+    opacity: 0;
+    display: none;
+  }
+
+  70% {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  to {
+    opacity: 1;
+    display: flex;
+  }
+}
+
+@keyframes close {
+  from {
+    opacity: 1;
+    display: flex;
+  }
+
+  70% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+
+  to {
+    opacity: 0;
+    display: none;
+  }
 }
