--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -55,6 +55,8 @@
   height: 100%;
   position: absolute;
   object-fit: cover;
+  pointer-events: none;
+  user-select: none;
 
   &--table {
     transform: translateY(-12px);
